<resources>
    <string name="app_name">DoBbipa</string>
    <string name="startScan">Start Scan</string>
    <string name="stopScan">Stop Scan</string>
    <string name="appBasicInfo">Indoor Positioning</string>
    <string name="closestRoom">Closest Room: </string>
    <string name="roomNumber">Room Number: </string>
    <string name="residents">Residents: </string>
    <string name="search">Search</string>
    <string name="nothingFound">Nothing found</string>
    <string name="noSuchRoom">No room found</string>
    <string name="locationAccess">This app needs location access</string>
    <string name="grantLocationAccess">Please grant location access so this app can detect peripherals.</string>
    <string name="limitedFunctionality">Functionality limited</string>
    <string name="noBackgroundRunning">Since location access has not been granted, this app will not be able to discover beacons when in the background.</string>
    <string name="whatsNear">Whats near?</string>
    <string name="starNavigation">Start Navigation</string>
    <string name="position">Position: </string>
    <string name="defaultSearchText">106</string>
    <string name="separator">Separator</string>
    <string name="faceImage">Face of the resident</string>
    <string name="noResult">No result found</string>
    <string name="seniorLecturer">Senior Lecturer</string>
    <string name="student">Student</string>
    <string name="assistantLecturer">Assistant Lecturer</string>
    <string name="associateProfessor">Associate Professor</string>
    <string name="phdStudentOne">PhD student</string>
    <string name="phdStudentTwo">PhD student</string>
    <string name="librarian">Librarian</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>


</resources>
