<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/appBasicInfo"
            android:textAlignment="center"
            android:textSize="22sp" />

        <Button
            android:id="@+id/whatNearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="40dp"
            android:text="@string/whatsNear" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/whatNearButton"
            android:layout_marginTop="40dp"
            android:text="@string/search" />

        <TextView
            android:id="@+id/macAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="121dp"
            android:text="" />

    </RelativeLayout>


</layout>