<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="person"
            type="hu.uni.miskolc.iit.ilona.bluetooth.proximity.model.Person" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/horizontalLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/separator"
            android:src="@drawable/horizontalline" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontalLine">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/faceImage"
                android:scaleType="centerCrop"
                android:src="@{person.image}" />


            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/imageView"
                android:text="@{person.name}"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTextView"
                android:text="@{person.title}"
                android:textSize="18sp" />

            <Button
                android:id="@+id/startNavigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleTextView"
                android:text="@string/starNavigation" />

        </RelativeLayout>


    </RelativeLayout>

</layout>