<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="roomNumber"
            type="String" />

        <variable
            name="position"
            type="String" />

    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/appBasicInfo"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/roomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="20dp"
            android:text="@string/roomNumber" />

        <TextView
            android:id="@+id/roomNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/roomTextView"
            android:text="@{roomNumber}" />

        <TextView
            android:id="@+id/positionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roomTextView"
            android:layout_marginTop="20dp"
            android:text="@string/position" />

        <TextView
            android:id="@+id/positionStringTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roomTextView"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/positionTextView"
            android:text="@{position}" />

        <TextView
            android:id="@+id/nextPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/positionTextView"
            android:layout_marginTop="29dp"
            android:text="" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nextPosition"
            android:layout_centerHorizontal="true"
            android:text="" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distance"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>


</layout>