<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="roomNumber"
            type="String" />

        <variable
            name="position"
            type="String" />

    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/appBasicInfo"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/roomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="20dp"
            android:text="@string/roomNumber"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/roomNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/roomTextView"
            android:text="@{roomNumber}"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/positionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roomTextView"
            android:layout_marginTop="20dp"
            android:text="@string/position"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/positionStringTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roomTextView"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/positionTextView"
            android:text="@{position}"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nextPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/positionTextView"
            android:layout_marginTop="29dp"
            android:text=""
            android:textStyle="bold" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nextPosition"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewCompass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distance"
            android:layout_centerHorizontal="true"
            android:src="@drawable/arrow" />

        <Button
            android:id="@+id/imageNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/title"
            android:layout_marginEnd="17dp"
            android:text="@string/imageNavigation" />


    </RelativeLayout>


</layout>